--- a/index.html
+++ b/index.html
@@ -19,37 +19,39 @@
 
     </head>
 <body>
-	<!-- navigation menu -->
-	<nav class="navbar fixed-top navbar-expand-lg navbar-light">
-	  <div class="container-fluid navbar-content-area">
-	    <a class="navbar-brand" href="#">Book an Artist</a>
-	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	      <span class="navbar-toggler-icon"></span>
-	    </button>
-	    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-	      <ul class="navbar-nav mr-auto">
-	        <li class="nav-item">
-	          <a class="nav-link active" href="#">Home</a>
-	        </li>
-	        <li class="nav-item">
-	          <a class="nav-link" href="#">Artist</a>
-	        </li>
-	        <li class="nav-item">
-	        	<a href="#" class="nav-link">Case Study</a>
-	        </li>
-	        <li class="nav-item">
-	        	<a href="#" class="nav-link">Blog</a>
-	        </li>
-	        <li class="nav-item">
-	        	<a href="#" class="nav-link">Artist Signup</a>
-	        </li>
-	        <li class="nav-item">
-	        	<a href="#" class="btn nav-search-btn"><i class="fas fa-search"></i></a>
-	        </li>
-	      </ul>
-	    </div>
-	  </div>
-	</nav>
+	<div class="container">
+		<!-- navigation menu -->
+		<nav class="navbar fixed-top navbar-expand-lg navbar-light">
+		  <div class="container-fluid navbar-content-area">
+		    <a class="navbar-brand" href="#">Book an Artist</a>
+		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		      <span class="navbar-toggler-icon"></span>
+		    </button>
+		    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+		      <ul class="navbar-nav mr-auto">
+		        <li class="nav-item">
+		          <a class="nav-link active" href="#">Home</a>
+		        </li>
+		        <li class="nav-item">
+		          <a class="nav-link" href="#">Artist</a>
+		        </li>
+		        <li class="nav-item">
+		        	<a href="#" class="nav-link">Case Study</a>
+		        </li>
+		        <li class="nav-item">
+		        	<a href="#" class="nav-link">Blog</a>
+		        </li>
+		        <li class="nav-item">
+		        	<a href="#" class="nav-link">Artist Signup</a>
+		        </li>
+		        <li class="nav-item">
+		        	<a href="#" class="btn nav-search-btn"><i class="fas fa-search"></i></a>
+		        </li>
+		      </ul>
+		    </div>
+		  </div>
+		</nav>
+	</div>
 
 	<!-- artist profile section -->
 	<section class="main-profile-section">
@@ -86,97 +88,102 @@
 
 	<!-- artist about carousel -->
 	<section class="artist-about-section">
-		<div class="container-fluid">
+		<div class="">
 			<div class="artist-about-content-area">
-				<ul class="nav nav-tabs" id="myTab" role="tablist">
-				  <li class="nav-item" role="presentation">
-				    <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Who I am</button>
-				  </li>
-				  <li class="nav-item" role="presentation">
-				    <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">My Artwork</button>
-				  </li>
-				  <li class="nav-tab-price-info d-none d-md-block">
-				  	<p class="title-text">$500 - $1000</p>
-				  	<p class="info-text">Mural design fee under $500</p>
-				  </li>
-				</ul>
 				<div class="container-fluid">
+					<ul class="nav nav-tabs" id="myTab" role="tablist">
+					  <li class="nav-item" role="presentation">
+					    <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Who I am</button>
+					  </li>
+					  <li class="nav-item" role="presentation">
+					    <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">My Artwork</button>
+					  </li>
+					  <li class="nav-tab-price-info d-none d-md-block">
+					  	<p class="title-text">$500 - $1000</p>
+					  	<p class="info-text">Mural design fee under $500</p>
+					  </li>
+					</ul>
+				</div>
+				<div class="">
 					<div class="tab-content" id="myTabContent">
 					  	<div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-						  	<div class="main-text-area">
-						  		<div class="title-area" data-aos="fade-up">
-						  			<div class="icon-area">
-						  				<img src="assets/img/profile.svg" alt="">
-						  			</div>
-						  			<p>About</p>
-						  		</div>
-						  		<div class="row">
-						  			<div class="col-lg-7 col-md-12">
-						  				<div class="artist-intro">
-								  			<p data-aos="fade-up" data-aos-delay="50">I'm Rory, a freelance artist, muralist, graphic designer, CAD designer, engineer, welder, carpenter and problem solver. I live in London and have traveled the world for work. I am inspired by art, technology and the natural world; but also by fantasy and science fiction. </p><br>
-								  			<p data-aos="fade-up" data-aos-delay="100">Committed to versatility, I choose not to be defined by a singular style. I often work to very specific client briefs but I am also able to create something unique if required. </p> <br>
-								  			<p data-aos="fade-up" data-aos-delay="150">I am happy to offer free consultation and estimates </p>
-								  		</div>
-						  			</div>
-						  			<div class="col-lg-5 col-md-12">
-						  				<div class="artist-comment" data-aos="zoom-in" data-aos-duration="500">
-						  					<img src="assets/img/double-quotes.svg" alt="" class="upper-quotes-img">
-						  					<p>Workshops, Interviews, Live painting events, Online Workshop, Canvas commissions, Custom designs for wallpapers or decals</p>
-						  					<img src="assets/img/double-quotes.svg" alt="" class="lower-quotes-img">
-						  				</div>
-						  			</div>
-						  		</div>
 
-						  		<div class="row">
-						  			<div class="col-lg-7">
-						  				<div class="sub-section-div" data-aos="fade-up">
-								  			<p class="title-text">My Skills</p>
-								  			<div class="myskill-tag-area">
-								  				<a href="#" class="skills-tag-btn">Workshops</a>
-										  		<a href="#" class="skills-tag-btn">Interviews</a>
-										  		<a href="#" class="skills-tag-btn">Canvas</a>
-										  		<a href="#" class="skills-tag-btn">Commisions</a>
-										  		<a href="#" class="skills-tag-btn">Live painting events</a>
-										  		<a href="#" class="skills-tag-btn">Online workshop</a>
-										  		<a href="#" class="skills-tag-btn">Tattoo Design</a>
-										  	</div>
-								  		</div>
-						  			</div>
-						  		</div>
-
-						  		<div class="row">
-						  			<div class="sub-section-div" data-aos="fade-up">
-							  			<p class="title-text">My Tools</p>
-							  			<div class="my-tools-tag-area">
-							  				<a href="#" class="tools-tag-btn"><i class="fas fa-spray-can"></i> Aerosol</a>
-									  		<a href="#" class="tools-tag-btn"><i class="fas fa-paint-brush"></i> Paint Brush</a>
-									  	</div>
+						  	<div class="container-fluid">
+						  		<div class="main-text-area">
+							  		<div class="title-area" data-aos="fade-up">
+							  			<div class="icon-area">
+							  				<img src="assets/img/profile.svg" alt="">
+							  			</div>
+							  			<p>About</p>
 							  		</div>
-						  		</div>
-						  	</div>
-						  	<div class="main-text-area">
-						  		<div class="title-area" data-aos="fade-up">
-						  			<div class="icon-area">
-						  				<img src="assets/img/profile.svg" alt="">
-						  			</div>
-						  			<p>Qualifications / Positions : </p>
-						  		</div>
-					  			<div class="row" data-aos="zoom-out-up">
-					  				<div class="col-lg-7">
-					  					<div class="work-experince-div">
-							  				<div class="milestone">
-							  					<p>Bachelor's of Fine Arts, RMIT, 2007</p>
-							  				</div>
-							  				<div class="milestone">
-							  					<p>Extensive art supply knowledge from working for Eckersleys art and craft supplies for almost 15 years.</p>
+							  		<div class="row">
+							  			<div class="col-lg-7 col-md-12">
+							  				<div class="artist-intro">
+									  			<p data-aos="fade-up" data-aos-delay="50">I'm Rory, a freelance artist, muralist, graphic designer, CAD designer, engineer, welder, carpenter and problem solver. I live in London and have traveled the world for work. I am inspired by art, technology and the natural world; but also by fantasy and science fiction. </p><br>
+									  			<p data-aos="fade-up" data-aos-delay="100">Committed to versatility, I choose not to be defined by a singular style. I often work to very specific client briefs but I am also able to create something unique if required. </p> <br>
+									  			<p data-aos="fade-up" data-aos-delay="150">I am happy to offer free consultation and estimates </p>
+									  		</div>
+							  			</div>
+							  			<div class="col-lg-5 col-md-12">
+							  				<div class="artist-comment" data-aos="zoom-in" data-aos-duration="500">
+							  					<img src="assets/img/double-quotes.svg" alt="" class="upper-quotes-img">
+							  					<p>Workshops, Interviews, Live painting events, Online Workshop, Canvas commissions, Custom designs for wallpapers or decals</p>
+							  					<img src="assets/img/double-quotes.svg" alt="" class="lower-quotes-img">
 							  				</div>
 							  			</div>
-					  				</div>
-					  			</div>						  		
+							  		</div>
+
+							  		<div class="row">
+							  			<div class="col-lg-7">
+							  				<div class="sub-section-div" data-aos="fade-up">
+									  			<p class="title-text">My Skills</p>
+									  			<div class="myskill-tag-area">
+									  				<a href="#" class="skills-tag-btn">Workshops</a>
+											  		<a href="#" class="skills-tag-btn">Interviews</a>
+											  		<a href="#" class="skills-tag-btn">Canvas</a>
+											  		<a href="#" class="skills-tag-btn">Commisions</a>
+											  		<a href="#" class="skills-tag-btn">Live painting events</a>
+											  		<a href="#" class="skills-tag-btn">Online workshop</a>
+											  		<a href="#" class="skills-tag-btn">Tattoo Design</a>
+											  	</div>
+									  		</div>
+							  			</div>
+							  		</div>
+
+							  		<div class="row">
+							  			<div class="sub-section-div" data-aos="fade-up">
+								  			<p class="title-text">My Tools</p>
+								  			<div class="my-tools-tag-area">
+								  				<a href="#" class="tools-tag-btn"><i class="fas fa-spray-can"></i> Aerosol</a>
+										  		<a href="#" class="tools-tag-btn"><i class="fas fa-paint-brush"></i> Paint Brush</a>
+										  	</div>
+								  		</div>
+							  		</div>
+							  	</div>
+							  	<div class="main-text-area">
+							  		<div class="title-area" data-aos="fade-up">
+							  			<div class="icon-area">
+							  				<img src="assets/img/profile.svg" alt="">
+							  			</div>
+							  			<p>Qualifications / Positions : </p>
+							  		</div>
+						  			<div class="row" data-aos="zoom-out-up">
+						  				<div class="col-lg-7">
+						  					<div class="work-experince-div">
+								  				<div class="milestone">
+								  					<p>Bachelor's of Fine Arts, RMIT, 2007</p>
+								  				</div>
+								  				<div class="milestone">
+								  					<p>Extensive art supply knowledge from working for Eckersleys art and craft supplies for almost 15 years.</p>
+								  				</div>
+								  			</div>
+						  				</div>
+						  			</div>						  		
+							  	</div>
 						  	</div>
 						  	 <!-- client feedback section -->
 							<section class="feedback-section">
-								<div class="container">
+								<div class="container-fluid">
 									<div class="row justify-content-center text-center" data-aos="flip-up">
 										<div class="heading-section">
 											<p class="subheading">My Reviews</p>
@@ -289,6 +296,7 @@
 						            </div>
 								</div>
 							</section>
+
 					  	</div>
 					  	<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
 					  		<div class="container">
